testsuite/bsc.typechecker/instances/order/StuckATF.bs.bsc-out.expected
checking package dependencies
compiling StuckATF.bs
Error: "StuckATF.bs", line 29, column 0: (T0030)
  The contexts for this expression are too general.
  Given type:
    a -> Prelude.Bit 8
  The following contexts are needed:
    Prelude.Bits a a__
      Introduced at the following locations:
	"StuckATF.bs", line 30, column 28
    StuckATF.NPick a__
      Introduced at the following locations:
	"StuckATF.bs", line 30, column 11
  The type variables are from the following positions:
    "a__" at "StuckATF.bs", line 30, column 28
